tests/pact/bad/bad-import-unimported-reference.repl
(begin-tx)

(module f F
  (defcap F () true)
  (defun f () true)
  (defun g () true)
)

(commit-tx)
(begin-tx)

(module g G
  (use f [g])
  (defcap G () true)
  (defun g () (f))
)
